==> cruwaller/stm32-logicanalyzer-base/src/hal/stm32g0xx.cpp <==
#include "stm32_def.h"
#include "priorities.h"
#include "platform.h"
#include <stm32g0xx_ll_dma.h>
#include <stm32g0xx_ll_cortex.h>
#define APB2PERIPH_BASE (APBPERIPH_BASE + 0x00010000UL)

uint32_t dma_channel_get(uint32_t periph, uint8_t type, uint8_t index)
{
    if (periph == USART1_BASE || periph == USART2_BASE || periph == USART3_BASE)
        return LL_DMA_CHANNEL_1;
    return 0xff;
}

void enable_pclock(uint32_t const periph_base)
{
    if (is_enabled_pclock(periph_base))
        return;

    if (periph_base < APB2PERIPH_BASE) {
        uint32_t pos = (periph_base - APBPERIPH_BASE) / 0x400;
        RCC->APBENR1 |= (1 << pos);
        RCC->APBENR1;
    } else if (periph_base < AHBPERIPH_BASE) {
        uint32_t pos = (periph_base - APB2PERIPH_BASE) / 0x400;
        RCC->APBENR2 |= (1 << pos);
        RCC->APBENR2;
    } else {
        uint32_t pos = (periph_base - AHBPERIPH_BASE) / 0x400;
        RCC->AHBENR |= (1 << pos);
        RCC->AHBENR;
    }
}

uint32_t is_enabled_pclock(uint32_t const periph_base)
{
    if (periph_base < APB2PERIPH_BASE) {
        uint32_t pos = (periph_base - APBPERIPH_BASE) / 0x400;
        return RCC->APBENR1 & (1 << pos);
    } else if (periph_base < AHBPERIPH_BASE) {
        uint32_t pos = (periph_base - APB2PERIPH_BASE) / 0x400;
        return RCC->APBENR2 & (1 << pos);
    } else {
        uint32_t pos = (periph_base - AHBPERIPH_BASE) / 0x400;
        return RCC->AHBENR & (1 << pos);
    }
}

void gpio_peripheral(uint32_t gpio, uint32_t mode, int pullup)
{
    GPIO_TypeDef *regs = digital_regs[GPIO2PORT(gpio)];
    GPIO_InitTypeDef init = {0};
    if (!regs)
        return;

    // Enable GPIO clock
    gpio_clock_enable(regs);

    init.Pin = GPIO2BIT(gpio);
    init.Speed = GPIO_SPEED_FREQ_MEDIUM;
    init.Pull = (!pullup) ? GPIO_NOPULL : ((pullup < 0) ? GPIO_PULLDOWN : GPIO_PULLUP);
    if (mode == GPIO_INPUT) {
        init.Mode = GPIO_MODE_INPUT;
    } else if (mode == GPIO_OUTPUT) {
        // push-pull, 0b00 | max speed 2 MHz, 0b01
        init.Mode = GPIO_MODE_OUTPUT_PP;
    } else if (mode == (GPIO_OUTPUT | GPIO_OPEN_DRAIN)) {
        // Open-drain, 0b01 | max speed 2 MHz, 0b01
        init.Mode = GPIO_MODE_OUTPUT_OD;
    } else if (mode == GPIO_ANALOG) {
        init.Mode = GPIO_MODE_ANALOG;
    } else {
        init.Alternate = (mode >> 4);
        init.Speed = GPIO_SPEED_FREQ_HIGH;
        // Alternate config
        if (mode & GPIO_OPEN_DRAIN) {
            // output open-drain mode, 10MHz
            init.Mode = GPIO_MODE_AF_OD;
        } else {
            // output push-pull mode, 10MHz
            init.Mode = GPIO_MODE_AF_PP;
        }
    }
    HAL_GPIO_Init(regs, &init);
}

uint32_t FAST_CODE_1 timer_read_time(void)
{
    uint32_t us = TIMC_2->CNT;
    us <<= 16;
    us += TIMC_1->CNT;
    return us;
}

int gpio_irq_get(uint8_t const pin)
{
    if (4 <= pin)
        return EXTI4_15_IRQn;
    else if (2 <= pin)
        return EXTI2_3_IRQn;
    return EXTI0_1_IRQn;
}

void gpio_isr_set(gpio_isr_cb_t cb, IRQn_Type irqnb)
{
    if (EXTI4_15_IRQn == irqnb)
        gpio_callback[2] = cb;
    else if (EXTI2_3_IRQn == irqnb)
        gpio_callback[1] = cb;
    else
        gpio_callback[0] = cb;
}
