==> cruwaller/stm32-logicanalyzer-base/src/hal/stm32f1xx.cpp <==
#include "stm32_def.h"
#include "priorities.h"
#include "platform.h"
#include <stm32f1xx_ll_dma.h>

uint32_t dma_channel_get(uint32_t periph, uint8_t type, uint8_t index)
{
    if (periph == USART1_BASE) {
        return (type == DMA_USART_RX) ? LL_DMA_CHANNEL_5 : LL_DMA_CHANNEL_4;
    } else if (periph == USART2_BASE) {
        return (type == DMA_USART_RX) ? LL_DMA_CHANNEL_7 : LL_DMA_CHANNEL_6;
    } else if (periph == USART3_BASE) {
        return (type == DMA_USART_RX) ? LL_DMA_CHANNEL_3 : LL_DMA_CHANNEL_2;
    }
    return 0xff;
}

void enable_pclock(uint32_t periph_base)
{
    if (is_enabled_pclock(periph_base))
        return;

    if (periph_base < APB2PERIPH_BASE) {
        uint32_t pos = (periph_base - APB1PERIPH_BASE) / 0x400;
        RCC->APB1ENR |= (1 << pos);
        RCC->APB1ENR;
    } else if (periph_base < AHBPERIPH_BASE) {
        uint32_t pos = (periph_base - APB2PERIPH_BASE) / 0x400;
        RCC->APB2ENR |= (1 << pos);
        RCC->APB2ENR;
    } else {
        uint32_t pos = (periph_base - AHBPERIPH_BASE) / 0x400;
        RCC->AHBENR |= (1 << pos);
        RCC->AHBENR;
    }
}

uint32_t is_enabled_pclock(uint32_t periph_base)
{
    if (periph_base < APB2PERIPH_BASE) {
        uint32_t pos = (periph_base - APB1PERIPH_BASE) / 0x400;
        return RCC->APB1ENR & (1 << pos);
    } else if (periph_base < AHBPERIPH_BASE) {
        uint32_t pos = (periph_base - APB2PERIPH_BASE) / 0x400;
        return RCC->APB2ENR & (1 << pos);
    } else {
        uint32_t pos = (periph_base - AHBPERIPH_BASE) / 0x400;
        return RCC->AHBENR & (1 << pos);
    }
}

void gpio_peripheral(uint32_t gpio, uint32_t mode, int pullup)
{
    GPIO_TypeDef *regs = digital_regs[GPIO2PORT(gpio)];
    if (!regs)
        return;

    // Enable GPIO clock
    gpio_clock_enable(regs);

    // Configure GPIO
    uint32_t pos = gpio % 16, shift = (pos % 8) * 4, msk = 0xf << shift, cfg;
    if (mode == GPIO_INPUT) {
        cfg = pullup ? 0x8 : 0x4;
    } else if (mode == GPIO_OUTPUT) {
        cfg = 0x1; // push-pull, 0b00 | max speed 2 MHz, 0b01
    } else if (mode == (GPIO_OUTPUT | GPIO_OPEN_DRAIN)) {
        cfg = 0x5; // Open-drain, 0b01 | max speed 2 MHz, 0b01
    } else if (mode == GPIO_ANALOG) {
        cfg = 0x0;
    } else {
        // Alternate function
        if (mode & GPIO_OPEN_DRAIN)
            // output open-drain mode, 10MHz
            cfg = 0xd;
            // output open-drain mode, 50MHz
            //cfg = 0xF;
        else if (pullup > 0)
            // input pins use GPIO_INPUT mode on the stm32f1
            cfg = 0x8;
        else
            // output push-pull mode, 10MHz
            cfg = 0x9;
            // output push-pull mode, 50MHz
            //cfg = 0xB;
    }
    if (pos & 0x8)
        regs->CRH = (regs->CRH & ~msk) | (cfg << shift);
    else
        regs->CRL = (regs->CRL & ~msk) | (cfg << shift);

    if (pullup > 0)
        regs->BSRR = 1 << pos;
    else if (pullup < 0)
        regs->BSRR = 1 << (pos + 16);

    if (gpio == GPIO('A', 13) || gpio == GPIO('A', 14))
        // Disable SWD to free PA13, PA14
        //AFIO->MAPR = AFIO_MAPR_SWJ_CFG_DISABLE;
        __HAL_AFIO_REMAP_SWJ_DISABLE();
    else if ((gpio == GPIO('A', 15)) || (gpio == GPIO('B', 3)) || (gpio == GPIO('B', 4)))
        // Disable JTAG-DP
        __HAL_AFIO_REMAP_SWJ_NOJTAG();
}

uint32_t FAST_CODE_1 timer_read_time(void)
{
    return DWT->CYCCNT;
}

int gpio_irq_get(uint8_t const pin)
{
    if (10 <= pin)
        return EXTI15_10_IRQn;
    else if (5 <= pin)
        return EXTI9_5_IRQn;
    return EXTI0_IRQn + pin;
}

void gpio_isr_set(gpio_isr_cb_t cb, IRQn_Type irqnb)
{
    if (EXTI15_10_IRQn == irqnb)
        gpio_callback[6] = cb;
    else if (EXTI9_5_IRQn == irqnb)
        gpio_callback[5] = cb;
    else
        gpio_callback[irqnb - EXTI0_IRQn] = cb;
}
